[package]
name = "cyprobe"
version = "0.1.0"
edition = "2021"
authors = ["Cybrium <eng@cybrium.ai>"]
description = "OT/SCADA network discovery and posture probe"
license = "Apache-2.0"
repository = "https://github.com/cybrium-ai/cyprobe"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Network — pure Rust packet capture (no libpcap dependency)
pnet = "0.35"
pnet_datalink = "0.35"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for upload command)
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# IP/CIDR parsing
ipnet = "2"

# FIDO2 (Phase 5 — feature-gated)
# ctap-hid-fido2 = { version = "3", optional = true }

[features]
default = []
fido2 = []  # Enable with --features fido2

[[bin]]
name = "cyprobe"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
